--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: 'webdev101',
+      loadSidebar: true
     }
   </script>
   <!-- Docsify v4 -->
