cache control for docsify

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   <script>
     window.$docsify = {
       name: 'webdev101',
+      requestHeaders: {
+        'cache-control': 'max-age=0',
+      },
       loadSidebar: true
     }
   </script>
