--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'webdev101',
+      name: 'WebDev101 par Rémi SHARROCK',
       requestHeaders: {
         'cache-control': 'max-age=0',
       },
