--- a/under_dev/05_json/index.html
+++ b/under_dev/05_json/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head><title>TypeScript Types Primitifs</title></head>
+    <head><title>TypeScript Types Primitifs</title>
+        <meta charset="UTF-8">
+    </head>
     <body>
         <script src="out/deezerOffline.js"></script>
     </body>
