--- a/public/09_objects/index.html
+++ b/public/09_objects/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>TypeScript Types Primitifs</title>
+    <head><title>webdev101 remi sharrock</title>
         <meta charset="UTF-8">
     </head>
     <body>
