--- a/public/10_json/index.html
+++ b/public/10_json/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head><title>webdev101 remi sharrock</title>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <script src="out/app.js"></script>
-    </body>
+
+<head>
+    <title>webdev101 remi sharrock</title>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+    <script src="out/app.js"></script>
+    <script src="out/deezerOffline.js"></script>
+</body>
+
 </html>
